--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h1 class="title">2023 Awesome Plan</h1>
     <p class="message">Carpe Diem!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t5 center done">완독 1권</div>
+        <div class="bucket img1-t5 center">완독 1권</div>
         <div class="bucket img2-t5 center">일본 여행</div>
         <div class="bucket img3-t5 center">주 3회 운동하기</div>
         <div class="bucket img4-t5 center">원서 1권 완독</div>
