--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> 2023 한나 버킷리스트 </title>
+    .done::after {    
+    content: "";
+    width: 70%;
+    height: 70%;
+    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/stamp.png");
+    background-size: cover;
+    background-position: center;
+    position: sticky;
+    top: 20%;
+}
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@400;500;600;700&display=swap');
         * {
